--- a/layouts/partials/comments.html
+++ b/layouts/partials/comments.html
@@ -9,6 +9,11 @@
       if (window.location.hostname === 'localhost') return;
       var disqus_config = function () {
         this.page.identifier = '{{ .File.Dir }}{{ .TranslationBaseName }}';
+        {{ if .IsTranslated -}}
+        this.page.url = '{{ .Permalink | replaceRE "^(https?://[^/]+)/[a-z]{2}(/.*)" "$1$2" }}';
+        {{- else -}}
+        this.page.url = '{{ .Permalink }}';
+        {{- end }}
       };
 
       var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
